# myharness

./: .coverage  .gitignore  .harness_config.json  .harness_config.json.template  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  myharness_improvement_plan.md  myharness_tier1_design.md  pyproject.toml  requirements-prod.txt  requirements.txt
config/: config.json  config.json.example  deployment.json.example
docs/: EDGE_CASE_AUDIT.md  PRODUCTION_READINESS.md  RUNBOOK.md  SPEC_ARCHITECTURE.md  SPEC_REQUIREMENTS.md  analysis-deterministic-vs-llm.md  app-deployment.md  existing-project-flow.md  installation.md
harness/: __init__.py  _filelock.py  _platform.py  arch_summary.py  architecture_inventory.py  autofix.py  batch_sizing.py  chat.py  cli.json  cli.py  dashboard.py  dashboard_v5views.py  dashboard_workspace.py  decomposition.py  deploy.py  docgen_prompts.py  fanout.py  flow_state.py  gateway.py  github_integration.py  graph.py  hitl.py  impact.py  link_check.py  lintgate.py  mcp_client.py  metrics.py  model_prices.json  no_progress.py  observability.py  parser_registry.py  patcher.py  playwright_gen.py  preflight.py  presets.py  redactor.py  repo_index.py  repo_memory.py  req_ids.py  sandbox.py  (+25 more)
scripts/: release.py  setup.py
tests/: conftest.py  test_arch_summary.py  test_architecture_layout_parser.py  test_audit_autofix_helpers.py  test_audit_cli_helpers.py  test_audit_dashboard_helpers.py  test_audit_deploy_health.py  test_audit_fanout.py  test_audit_gateway.py  test_audit_github_integration.py  test_audit_graph_helpers.py  test_audit_mcp.py  test_audit_observability_metrics.py  test_audit_patcher_helpers.py  test_audit_proc_helpers.py  test_audit_redactor.py  test_audit_repo_index.py  test_audit_repo_memory.py  test_audit_sandbox_streamer.py  test_audit_schedule.py  test_audit_speculative_lintgate.py  test_audit_storage.py  test_audit_trust.py  test_audit_web_state.py  test_audit_web_tools.py  test_autofix.py  test_batch_commit.py  test_batch_commit_node.py  test_batch_gate_progress.py  test_batch_scope.py  test_batch_sizing.py  test_batch_topo_order.py  test_cache_volumes.py  test_change_requests.py  test_chat.py  test_cli_basics.py  test_cli_web_start_stop.py  (+77 more)
(+52 files in other folders)
