[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-harness"
version = "1.0.0"
description = "Production-grade, model-agnostic AI Agent Harness with LangGraph orchestration, sandboxed builds, and bulletproof persistence."
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "AI Agent Harness Team" }
]
dependencies = [
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiofiles>=24.0.0",
    "tree-sitter>=0.23.0",
    # tree-sitter-language-pack bundles grammars for 165+ languages in a
    # single wheel, including Python, JavaScript, TypeScript, TSX, Java,
    # Go, Rust, Dart, Swift, etc. Using one package avoids dependency
    # churn from upgrading 6+ individual grammar packages and gives us
    # Dart coverage (which doesn't have a standalone PyPI distribution).
    "tree-sitter-language-pack>=1.8.0",
    "httpx>=0.28.0",
    "uuid7>=0.1.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=3.7.0",
    # Required by tests/test_harness.py to construct LangGraph checkpoint
    # blobs for the GC regression test. The runtime code in storage.py
    # treats msgpack as optional and falls back to JSON if it's absent,
    # but the test needs to encode a backdated 'ts' inside the blob.
    "msgpack>=1.0.0",
]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.setuptools.package-data]
harness = ["cli.json", "model_prices.json"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
# Collect tests only from the tests/ directory so source modules whose
# filenames happen to start with `test_` (e.g. harness/test_generation.py,
# the auto-test-gen graph node) are not picked up as test files.
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
